syntax = "proto3";

package proto;

option go_package = "./";

service VideoTranscoderService {
    rpc TranscodeVideo (stream TranscodeVideoRequest) returns (TranscodeVideoResponse);
}

message TranscodeVideoRequest {
    string filename = 1;
    repeated string resolutions = 2;
}

message TranscodeVideoResponse {
    string message = 1;
    bool success = 2;
    repeated string transcoded_files = 3;
    int64 duration = 4;
}
// $ protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./proto/video.proto